; ModuleID = '/home/carl/AnghaBench/disque/src/extr_config.c_rewriteConfigGetContentFromState.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_config.c_rewriteConfigGetContentFromState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rewriteConfigState = type { i32, i32* }

@.str = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rewriteConfigGetContentFromState(%struct.rewriteConfigState* %0) #0 {
  %2 = alloca %struct.rewriteConfigState*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.rewriteConfigState* %0, %struct.rewriteConfigState** %2, align 8
  %6 = call i32 (...) @sdsempty()
  store i32 %6, i32* %3, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %41, %1
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %10 = getelementptr inbounds %struct.rewriteConfigState, %struct.rewriteConfigState* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = icmp slt i32 %8, %11
  br i1 %12, label %13, label %44

13:                                               ; preds = %7
  %14 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %15 = getelementptr inbounds %struct.rewriteConfigState, %struct.rewriteConfigState* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @sdslen(i32 %20)
  %22 = icmp eq i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %13
  %24 = load i32, i32* %5, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  br label %41

27:                                               ; preds = %23
  store i32 1, i32* %5, align 4
  br label %29

28:                                               ; preds = %13
  store i32 0, i32* %5, align 4
  br label %29

29:                                               ; preds = %28, %27
  %30 = load i32, i32* %3, align 4
  %31 = load %struct.rewriteConfigState*, %struct.rewriteConfigState** %2, align 8
  %32 = getelementptr inbounds %struct.rewriteConfigState, %struct.rewriteConfigState* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = load i32, i32* %4, align 4
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @sdscatsds(i32 %30, i32 %37)
  store i32 %38, i32* %3, align 4
  %39 = load i32, i32* %3, align 4
  %40 = call i32 @sdscatlen(i32 %39, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 1)
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %29, %26
  %42 = load i32, i32* %4, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %4, align 4
  br label %7

44:                                               ; preds = %7
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @sdsempty(...) #1

declare dso_local i64 @sdslen(i32) #1

declare dso_local i32 @sdscatsds(i32, i32) #1

declare dso_local i32 @sdscatlen(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
